[gd_scene load_steps=18 format=3 uid="uid://ckf0okci8mfm1"]

[ext_resource type="Script" path="res://scenes/game_of_life.gd" id="1_oc2a8"]
[ext_resource type="Texture2D" uid="uid://mt7pueeb0ox4" path="res://icon.svg" id="1_t7dgf"]
[ext_resource type="Shader" path="res://shaders/dot_matrix.gdshader" id="2_mf3jq"]
[ext_resource type="Script" path="res://scenes/search_panel.gd" id="2_re7kb"]
[ext_resource type="Script" path="res://scenes/state_machine/gol_state_machine.gd" id="2_wx2qu"]
[ext_resource type="Script" path="res://scenes/state_machine/draw_state.gd" id="3_a024e"]
[ext_resource type="Texture2D" uid="uid://csuar07pb12et" path="res://assets/tex_lit.png" id="3_p6yrp"]
[ext_resource type="Script" path="res://scenes/state_machine/run_state.gd" id="4_etdbi"]
[ext_resource type="Texture2D" uid="uid://dg7xfxdymlqdl" path="res://assets/tex_unlit.png" id="4_i0rv3"]
[ext_resource type="Script" path="res://scenes/state_machine/select_state.gd" id="5_ia4lj"]
[ext_resource type="Script" path="res://scenes/camera.gd" id="6_2lvmn"]

[sub_resource type="Gradient" id="Gradient_sh5a7"]
colors = PackedColorArray(0, 0, 0, 1, 0, 0, 0, 1)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_m23fr"]
gradient = SubResource("Gradient_sh5a7")

[sub_resource type="ShaderMaterial" id="ShaderMaterial_404el"]
shader = ExtResource("2_mf3jq")
shader_parameter/grid_size = Vector2(128, 128)
shader_parameter/lit_texture = ExtResource("3_p6yrp")
shader_parameter/unlit_texture = ExtResource("4_i0rv3")
shader_parameter/binary_texture = SubResource("GradientTexture2D_m23fr")
shader_parameter/mask_texture = SubResource("GradientTexture2D_m23fr")

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_4fqb3"]
bg_color = Color(0.231373, 0.376471, 0.462745, 1)
border_width_left = 4
border_width_top = 4
border_width_right = 4
border_width_bottom = 4
border_color = Color(0.14, 0.228667, 0.28, 1)
corner_radius_top_left = 6
corner_radius_top_right = 6
corner_radius_bottom_right = 6
corner_radius_bottom_left = 6
expand_margin_left = 2.0
expand_margin_top = 2.0
expand_margin_right = 2.0
expand_margin_bottom = 2.0

[sub_resource type="ShaderMaterial" id="ShaderMaterial_dlav4"]
shader = ExtResource("2_mf3jq")
shader_parameter/grid_size = Vector2(16, 9)
shader_parameter/lit_texture = ExtResource("3_p6yrp")
shader_parameter/unlit_texture = ExtResource("4_i0rv3")
shader_parameter/mask_texture = SubResource("GradientTexture2D_m23fr")

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_dcpor"]
bg_color = Color(0.23, 0.375667, 0.46, 0.705882)

[node name="GameOfLife" type="Node2D"]
script = ExtResource("1_oc2a8")
grid_size = Vector2i(512, 512)

[node name="Renderer" type="Sprite2D" parent="."]
material = SubResource("ShaderMaterial_404el")
position = Vector2(960, 540)
scale = Vector2(15, 15)
texture = ExtResource("1_t7dgf")

[node name="Camera2D" type="Camera2D" parent="."]
anchor_mode = 0
script = ExtResource("6_2lvmn")
zoom_decay = 40.0

[node name="UILayer" type="CanvasLayer" parent="."]

[node name="UI" type="Control" parent="UILayer"]
unique_name_in_owner = true
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 1

[node name="RuleEdit" type="LineEdit" parent="UILayer/UI"]
unique_name_in_owner = true
visible = false
layout_mode = 2
offset_left = 799.0
offset_top = 445.0
offset_right = 986.0
offset_bottom = 481.0
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 20
text = "B3/S23"

[node name="InfoVBox" type="VBoxContainer" parent="UILayer/UI"]
layout_mode = 0
offset_right = 240.0
offset_bottom = 132.0

[node name="UpdateIntervalNumber" type="Label" parent="UILayer/UI/InfoVBox"]
unique_name_in_owner = true
layout_mode = 2
theme_override_font_sizes/font_size = 20
text = "Update Interval: 0.2"

[node name="ModeLabel" type="Label" parent="UILayer/UI/InfoVBox"]
unique_name_in_owner = true
layout_mode = 2
theme_override_font_sizes/font_size = 20
text = "Mode: Draw"

[node name="GenerationNumber" type="Label" parent="UILayer/UI/InfoVBox"]
unique_name_in_owner = true
layout_mode = 2
theme_override_font_sizes/font_size = 20
text = "Generation: 0"

[node name="RuleLabel" type="Label" parent="UILayer/UI/InfoVBox"]
unique_name_in_owner = true
layout_mode = 2
theme_override_font_sizes/font_size = 20
text = "Rule: B3S23"

[node name="SearchPanel" type="CenterContainer" parent="UILayer/UI"]
unique_name_in_owner = true
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("2_re7kb")

[node name="PanelContainer" type="PanelContainer" parent="UILayer/UI/SearchPanel"]
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_4fqb3")

[node name="SearchHBox" type="HBoxContainer" parent="UILayer/UI/SearchPanel/PanelContainer"]
layout_mode = 2

[node name="PanelContainer" type="PanelContainer" parent="UILayer/UI/SearchPanel/PanelContainer/SearchHBox"]
layout_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="UILayer/UI/SearchPanel/PanelContainer/SearchHBox/PanelContainer"]
layout_mode = 2
theme_override_constants/margin_left = 2
theme_override_constants/margin_top = 2
theme_override_constants/margin_right = 2
theme_override_constants/margin_bottom = 2

[node name="VBoxContainer" type="VBoxContainer" parent="UILayer/UI/SearchPanel/PanelContainer/SearchHBox/PanelContainer/MarginContainer"]
custom_minimum_size = Vector2(256, 0)
layout_mode = 2

[node name="SearchInfoHBox" type="HBoxContainer" parent="UILayer/UI/SearchPanel/PanelContainer/SearchHBox/PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 2

[node name="SearchEdit" type="LineEdit" parent="UILayer/UI/SearchPanel/PanelContainer/SearchHBox/PanelContainer/MarginContainer/VBoxContainer/SearchInfoHBox"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3

[node name="SearchButton" type="Button" parent="UILayer/UI/SearchPanel/PanelContainer/SearchHBox/PanelContainer/MarginContainer/VBoxContainer/SearchInfoHBox"]
unique_name_in_owner = true
layout_mode = 2
text = "Search
"

[node name="SearchResultContainer" type="ScrollContainer" parent="UILayer/UI/SearchPanel/PanelContainer/SearchHBox/PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="SearchResultVBox" type="VBoxContainer" parent="UILayer/UI/SearchPanel/PanelContainer/SearchHBox/PanelContainer/MarginContainer/VBoxContainer/SearchResultContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3

[node name="SelectedObjectInfo" type="VBoxContainer" parent="UILayer/UI/SearchPanel/PanelContainer/SearchHBox"]
layout_mode = 2

[node name="Preview" type="TextureRect" parent="UILayer/UI/SearchPanel/PanelContainer/SearchHBox/SelectedObjectInfo"]
unique_name_in_owner = true
material = SubResource("ShaderMaterial_dlav4")
custom_minimum_size = Vector2(768, 432)
layout_mode = 2
texture = ExtResource("1_t7dgf")
expand_mode = 1

[node name="PanelContainer" type="PanelContainer" parent="UILayer/UI/SearchPanel/PanelContainer/SearchHBox/SelectedObjectInfo"]
layout_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="UILayer/UI/SearchPanel/PanelContainer/SearchHBox/SelectedObjectInfo/PanelContainer"]
layout_mode = 2
theme_override_constants/margin_left = 4
theme_override_constants/margin_top = 4
theme_override_constants/margin_right = 4
theme_override_constants/margin_bottom = 4

[node name="Description" type="Label" parent="UILayer/UI/SearchPanel/PanelContainer/SearchHBox/SelectedObjectInfo/PanelContainer/MarginContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(0, 150)
layout_mode = 2
size_flags_vertical = 1
text = "This is object 1.
fdhaefl
ehfalksdjfa
ehfldsajfkldsa"
autowrap_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="UILayer/UI/SearchPanel/PanelContainer/SearchHBox/SelectedObjectInfo/PanelContainer/MarginContainer/Description"]
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -31.0
grow_horizontal = 2
grow_vertical = 0
alignment = 2

[node name="CancelButton" type="Button" parent="UILayer/UI/SearchPanel/PanelContainer/SearchHBox/SelectedObjectInfo/PanelContainer/MarginContainer/Description/HBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(80, 0)
layout_mode = 2
text = "Cancel"

[node name="OkButton" type="Button" parent="UILayer/UI/SearchPanel/PanelContainer/SearchHBox/SelectedObjectInfo/PanelContainer/MarginContainer/Description/HBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(80, 0)
layout_mode = 2
text = "     OK     "

[node name="RMBOptions" type="PanelContainer" parent="UILayer/UI"]
unique_name_in_owner = true
visible = false
custom_minimum_size = Vector2(160, 0)
layout_mode = 0
offset_right = 160.0
offset_bottom = 27.0
theme_override_styles/panel = SubResource("StyleBoxFlat_dcpor")

[node name="RMBVBox" type="VBoxContainer" parent="UILayer/UI/RMBOptions"]
unique_name_in_owner = true
layout_mode = 2

[node name="GolStateMachine" type="Node" parent="." node_paths=PackedStringArray("initial_state")]
script = ExtResource("2_wx2qu")
initial_state = NodePath("DrawState")

[node name="DrawState" type="Node" parent="GolStateMachine"]
script = ExtResource("3_a024e")
state = null

[node name="RunState" type="Node" parent="GolStateMachine"]
script = ExtResource("4_etdbi")
state = 2

[node name="SelectState" type="Node" parent="GolStateMachine"]
script = ExtResource("5_ia4lj")
state = 1
